choose-mirror (0.039) UNRELEASED; urgency=low

  * Translators: do not modify this changelog to record changes you make to
    po files. A record of your contributions will be added to the changelog
    at package release time by the output-l10n-changes program.

 -- Carlos Z.F. Liu <carlos_liu@yahoo.com>  Wed, 17 Mar 2004 01:35:43 +1300

choose-mirror (0.038) unstable; urgency=low

  * Translations
    - Dafydd Harries : translated AR to Welsh
    - Russian by Nikolai Prokoschenko
 
 -- Joey Hess <joeyh@debian.org>  Sun, 14 Mar 2004 13:03:21 -0500

choose-mirror (0.037) unstable; urgency=low

  * Denis Barbier
    - Really made http/mirror and ftp/mirror descriptions the same.
  * Translations
    - Christian Perrier: Added translated country names of Argentina
      (added in the last upload) when they exist in iso-codes, i.e.
      for the following languages:
        bg bs ca cs da de el en es fi fr hu it ja
        ko lt nb nl pl pt pt_BR sl sq sv tr zh_TW

 -- Joey Hess <joeyh@debian.org>  Sat, 13 Mar 2004 12:09:52 -0500

choose-mirror (0.036) unstable; urgency=low

  * Joey Hess
    - Made http/mirror and ftp/mirror descriptions the same.

  * Translations
    - Ognyan Kulev: Updated Bulgarian translation (bg.po).
    - Dafydd Harries : Added Welsh translation (cy.po)

 -- Joey Hess <joeyh@debian.org>  Sat, 13 Mar 2004 00:09:17 -0500

choose-mirror (0.035) unstable; urgency=low

  * Joey Hess
    - bumped the mirror questions back up to high

  * Translations
    - Miguel Figueiredo: Updated Portuguese translation (pt.po)
    - Bartosz Fenski: Updated Polish translation (pl.po)
    - Giuseppe Sacco: updated italian translation (it.po)
    - Håvard Korsvoll: Updated Norwegian, nynorsk translation (nn.po).
    - Andre Dahlqvist: Update Swedish translation (sv.po)
    - Bart Cornelis: Update Dutch translation (nl.po) 
    - Jure Cuhalev: Update Slovenian translation (sl.po) 
    - Ming Hua: Initial and updated Traditional Chinese translation