@@ -17,7 +17,7 @@ install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_install choose-mirror usr/bin
+	$(MAKE) install
 
 binary-indep: build install
 
