@@ -1,10 +1,14 @@
 choose-mirror (0.039) UNRELEASED; urgency=low
 
+  * Joshua Kwan
+    - Instead of having a postinst script that calls choose-mirror,
+      make choose-mirror the postinst, just like netcfg works.
+    - Reject slashes in the mirror hostname. (Closes: #215620)
   * Translators: do not modify this changelog to record changes you make to
     po files. A record of your contributions will be added to the changelog
     at package release time by the output-l10n-changes program.
 
- -- Carlos Z.F. Liu <carlos_liu@yahoo.com>  Wed, 17 Mar 2004 01:35:43 +1300
+ -- Joshua Kwan <joshk@triplehelix.org>  Thu, 18 Mar 2004 08:53:53 -0800
 
 choose-mirror (0.038) unstable; urgency=low
 
